--- a/asterisk-docker/config/extensions.conf
+++ b/asterisk-docker/config/extensions.conf
@@ -1,3 +1,28 @@
-[users]
-exten => 1001,1,Dial(SIP/1001,20)
-exten => 1002,1,Dial(SIP/1002,20)
+[general]
+static=yes
+writeprotect=no
+
+[default]
+; 201 から 202 への発信
+exten => 202,1,Dial(PJSIP/202)
+
+; 201 から 203 への発信
+exten => 203,1,Dial(PJSIP/203)
+
+; 202 から 201 への発信
+exten => 201,1,Dial(PJSIP/201)
+
+; 202 から 203 への発信
+exten => 203,1,Dial(PJSIP/203)
+
+; 203 から 201 への発信
+exten => 201,1,Dial(PJSIP/201)
+
+; 203 から 202 への発信
+exten => 202,1,Dial(PJSIP/202)
+
+; すべての番号に対するデフォルトの処理
+exten => _X.,1,NoOp(発信された番号: ${EXTEN})
+ same => n,Answer()
+ same => n,Playback(hello-world)
+ same => n,Hangup()
